add heartbeat and register endpoint implementation
